# lsosc

./: COPYING  Makefile.in  README  README.epu.ls.eso.org  README.md  config.status  configure  configure.in  install.sh
include/: liblsosc.h
lib/: README
libsrc/: Makefile  Makefile.in  liblsosc.c
src/: Makefile  Makefile.in  lsosc  lsosc.c  tcsdk154sc.c
