dnl "@(#) $Id: configure.in,v 1.6 2006/07/20 11:56:47 jpritcha Exp $"
dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/lsosc.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB

dnl Checks for libraries.
AC_CHECK_LIB(m, main)
AC_CHECK_LIB(skycalc, skycalcmain)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(libskycalc.h, have_libskycalch=yes, have_libskycalch=no )

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_STRUCT_TM

dnl Checks for library functions.
AC_CHECK_FUNCS(mktime)

AC_SUBST(have_libskycalch)

AC_OUTPUT(Makefile libsrc/Makefile src/Makefile)
